--- a/src/glossario.tex
+++ b/src/glossario.tex
@@ -317,8 +317,64 @@
 {
     name=\glslink{jsong}{JSON (JavaScript Object Notation)},
     text=JSON,
-    sort=jsong,
+    sort=json,
     description={\'E uno \textit{standard} che definisce un formato per \textit{file} che permette di rappresentare oggetti composti da coppie chiave-valore ed \textit{array}. Questo formato è molto utilizzato nello scambio di dati \textit{client}/\textit{server} e viene spesso preferito al formato \gls{xmlg} essendo meno verboso}
+}
+
+\newglossaryentry{parsingg}
+{
+    name=\glslink{parsingg}{Parsing},
+    text=parsing,
+    sort=parsing,
+    description={In informatica, è un processo che stabilisce se un testo scritto con i simboli di un determinato linguaggio sia conforme ad esso. Questo processo viene eseguito da un \textit{software} chiamato \textit{parser}}
+}
+
+\newglossaryentry{struttdatig}
+{
+    name=\glslink{struttdatig}{Struttura dati},
+    text=struttura dati,
+    sort=struttura dati,
+    description={In informatica, è un'entita che viene utilizzata per organizzare un insieme di dati in memoria (\textit{RAM} o di massa). Vengono pesantemente utilizzate per la progettazione di algoritmi efficienti}
+}
+
+\newglossaryentry{libg}
+{
+    name=\glslink{libg}{Libreria},
+    text=libreria,
+    sort=libreria,
+    description={In informatica, una libreria è un insieme di funzioni, metodi e strutture dati che possono essere incluse in un altro software rispettando opportune condizioni}
+}
+
+\newglossaryentry{httpg}
+{
+    name=\glslink{httpg}{HTTP (Hypertext Transfer Protocol)},
+    text=HTTP,
+    sort=http,
+    description={Protocollo di applicazione che sta alla base dello scambio di informazioni tra \textit{client} e \textit{server} all'interno dei servizi \textit{web}}
+}
+
+\newglossaryentry{soapg}
+{
+    name=\glslink{soapg}{SOAP (Simple Object Access Protocol)},
+    text=SOAP,
+    sort=soap,
+    description={Protocollo per lo scambio di messaggi tra componenti \textit{software}. L'idea risiede nello strutturare questi messaggi secondo il paradigma della programmazione ad oggetti}
+}
+
+\newglossaryentry{apig}
+{
+    name=\glslink{apig}{API (Application Programming Interface)},
+    text=API,
+    sort=api,
+    description={Nell'ambito dello sviluppo \textit{software} si intende un insieme di procedure, opportunamente organizzate, che risolvono un determinato problema. Spesso si usa questo termine per rifersi alle librerie offerta da un linguaggio di programmazione}
+}
+
+\newglossaryentry{depinjg}
+{
+    name=\glslink{depinjg}{Dependency Injection},
+    text=dependency injection,
+    sort=dependency injection,
+    description={In ingegneria del software è una tecnica nella quale un oggetto si occupa di fornire tuttle le dipendenze necessarie ad un altro oggetto. Viene utilizzato per semplificare l'attività di \textit{test} sul \textit{software}}
 }
 
 %**************************************************************
